--- a/config/my_controllers.yaml
+++ b/config/my_controllers.yaml
@@ -17,8 +17,11 @@ diff_cont:
 
     left_wheel_names: ['front_left_wheel_joint', 'back_left_wheel_joint']
     right_wheel_names: ['front_right_wheel_joint', 'back_right_wheel_joint']
-    
+
     wheel_separation: 0.35
     wheel_radius: 0.05
 
     use_stamped_vel: false
+
+# joint_broad:
+#   ros_parameters:
